K8s/microservices/dispatch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatch-deployment
  labels:
    app: dispatch
    tier: message-queue
spec:
  
  selector:
    matchLabels:
      app: dispatch
  template:
    metadata:
      labels:
        app: dispatch
        tier: message-queue
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: dispatch
        securityContext:
          allowPrivilegeEscalation: false
        image: robotshop/rs-dispatch:2.1.0
      
        resources:
          requests:
            cpu: "350m"      
            memory: "200Mi"  
          limits:
            cpu: "700m"      
            memory: "400Mi"
