K8s/microservices/dispatch/pod-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dispatch-network-policy
spec:
  podSelector:
    matchLabels:
      app: dispatch 
  policyTypes:
  - Ingress
  - Egress
    
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
      
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

  - to:
    - podSelector:
        matchLabels:
          app: rabbitmq
      
    ports:
    - protocol: TCP
      port: 5672
